HyperCloud Webhook/manifests/04_webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: hypercloud4-mutator
webhooks:
  - name: hypercloud4-webhook-svc.hypercloud4-system.svc
    clientConfig:
      service:
        name: hypercloud4-webhook-svc
        namespace: hypercloud4-system
        path: "/mutate"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURUVENDQWpXZ0F3SUJBZ0lVQ2VOZDRGR3BOTStZWXh2L1FLZ3JESkZHVmNBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05qRTBNRElHQTFVRUF3d3JTSGx3WlhKamJHOTFaRFFnUVdSdGFYTnphVzl1SUVOdmJuUnliMnhzWlhJZwpWMlZpYUc5dmF5QkRRVEFlRncweU1EQTNNREV4TURBek1qSmFGdzB5TVRBM01ERXhNREF6TWpKYU1EWXhOREF5CkJnTlZCQU1NSzBoNWNHVnlZMnh2ZFdRMElFRmtiV2x6YzJsdmJpQkRiMjUwY205c2JHVnlJRmRsWW1odmIyc2cKUTBFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUM4NGU0Zi9adnlNVHFuY0ZYbQpta2tSVnFlZ2tS [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods", "configmaps","secrets","persistentvolumes","persistentvolumeclaims","namespaces","limitranges","resourcequotas","nodes","serviceaccounts"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments", "replicasets"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["servicecatalog.k8s.io"]
        apiVersions: ["v1"]
        resources: ["*"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["kubevirt.io"]
        apiVersions: ["v1"]
        resources: ["*"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["batch"]
        apiVersions: ["v1"]
        resources: ["jobs", "cronjobs"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["extensions"]
        apiVersions: ["v1"]
        resources: ["ingresses"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["storage.k8s.io"]
        apiVersions: ["v1"]
        resources: ["*"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["tekton.dev"]
        apiVersions: ["v1"]
        resources: ["*"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["networking.k8s.io"]
        apiVersions: ["v1"]
        resources: ["*"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["tmax.io"]
        apiVersions: ["v1"]
        resources: ["*"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["apiextensions.k8s.io"]
        apiVersions: ["v1"]
        resources: ["*"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["rbac.authorization.k8s.io"]
        apiVersions: ["v1"]
        resources: ["*"]
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["policy"]
        apiVersions: ["v1"]
        resources: ["podsecuritypolicies"]
    matchPolicy: Equivalent
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    timeoutSeconds: 10
    namespaceSelector:
      matchExpressions:
      - key: webhook
        operator: In
        values: ["true"]
    failurePolicy: Fail
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: hypercloud4-validator
webhooks:
  - name: hypercloud4-webhook-svc.hypercloud4-system.svc
    clientConfig:
      service:
        name: hypercloud4-webhook-svc
        namespace: hypercloud4-system
        path: "/validate"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURUVENDQWpXZ0F3SUJBZ0lVQ2VOZDRGR3BOTStZWXh2L1FLZ3JESkZHVmNBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05qRTBNRElHQTFVRUF3d3JTSGx3WlhKamJHOTFaRFFnUVdSdGFYTnphVzl1SUVOdmJuUnliMnhzWlhJZwpWMlZpYUc5dmF5QkRRVEFlRncweU1EQTNNREV4TURBek1qSmFGdzB5TVRBM01ERXhNREF6TWpKYU1EWXhOREF5CkJnTlZCQU1NSzBoNWNHVnlZMnh2ZFdRMElFRmtiV2x6YzJsdmJpQkRiMjUwY205c2JHVnlJRmRsWW1odmIyc2cKUTBFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUM4NGU0Zi9adnlNVHFuY0ZYbQpta2tSVnFlZ2tS [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods", "configmaps"]
        scope: "Namespaced"
      - operations: ["CREATE","UPDATE"]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments", "replicasets"]
        scope: "Namespaced"
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    timeoutSeconds: 10
    namespaceSelector:
      matchExpressions:
      - key: webhook
        operator: In
        values: ["true"]
    failurePolicy: Fail
